--- a/render.yaml
+++ b/render.yaml
@@ -12,14 +12,12 @@
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        fromDatabase:
-          name: smile-ride-db
+        fromService:
+          type: pserv
+          name: srv-d6dq0kktgctc73f957ig
           property: connectionString
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: smile-ride-redis
-          property: connectionString
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_EXPIRES_IN
@@ -38,13 +36,3 @@
           type: web
           name: smile-ride-api
           property: url
-
-databases:
-  - name: smile-ride-db
-    plan: free
-    databaseName: smile_ride
-
-redis:
-  - name: smile-ride-redis
-    plan: free
-    maxmemoryPolicy: allkeys-lru
