--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 ﻿[phases.setup]
-nixPkgs = ["nodejs_18", "npm"]
+nixPkgs = ["nodejs_18"]
 
 [phases.build]
 cmds = ["cd backend && npm install"]
 
-[phases.start]
-cmds = ["cd backend && npm start"]
+[start]
+cmd = "cd backend && npm start"
